// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress Component > Rendering > Snapshots > matches all sizes snapshot 1`] = `
<div
  data-testid="sizes-container"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full h-1 bg-primary/20"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full h-2 bg-primary/20"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full h-3 bg-primary/20"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component > Rendering > Snapshots > matches all variants snapshot 1`] = `
<div
  data-testid="variants-container"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full h-2 bg-primary/20"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    class="relative w-full overflow-hidden rounded-full bg-primary/20 h-2"
    data-max="100"
    data-state="indeterminate"
    role="progressbar"
  >
    <div
      class="h-full w-full flex-1 transition-all duration-300 ease-in-out"
      data-max="100"
      data-state="indeterminate"
      style="transform: translateX(-100%);"
    />
  </div>
</div>
`;

exports[`Progress Component > Rendering > Snapshots > matches default snapshot 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative w-full overflow-hidden rounded-full h-2 bg-primary/20"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`Progress Component > Rendering > Snapshots > matches disabled state snapshot 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative w-full overflow-hidden rounded-full h-2 bg-primary/20"
  data-max="100"
  data-state="indeterminate"
  disabled=""
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;

exports[`Progress Component > Rendering > Snapshots > matches loading state snapshot 1`] = `
<div
  aria-valuemax="100"
  aria-valuemin="0"
  class="relative w-full overflow-hidden rounded-full h-2 bg-primary/20"
  data-max="100"
  data-state="indeterminate"
  role="progressbar"
>
  <div
    class="h-full w-full flex-1 transition-all duration-300 ease-in-out bg-primary"
    data-max="100"
    data-state="indeterminate"
    style="transform: translateX(-100%);"
  />
</div>
`;
